Enabled some logging to help with MWMB troubleshooting

--- a/MWMBSourceStollie.csproj
+++ b/MWMBSourceStollie.csproj
@@ -42,7 +42,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\BlenderPlugins\StollieMWMBuilder\</OutputPath>
+    <OutputPath>..\SpaceEngineers\Assets\Tools\MWMBuilder\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
